--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,11 @@ edition = "2021"
 
 [dependencies]
 axum = "0.6.20"
+axum-extra = { version = "0.8.0", features = ["cookie"] }
+base64 = "0.21.5"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
-shuttle-axum = "0.34.0"
-shuttle-runtime = "0.34.0"
+shuttle-axum = "0.35.0"
+shuttle-runtime = "0.35.0"
 tokio = "1.28.2"
 tracing = "0.1.40"
